object width organized.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ $(function(){
   $('#video').prop( 'width', x );
   $('#canvas').prop( 'width', x );
   $('#img').prop( 'width', x );
+  $('#img').prop( 'height', 480 );
 
   var mediaStreamConstraints = { video: true };
   localVideo = document.querySelector( "video" );
